# AutoSpr

./: .gitignore  Contributors  LICENSE  Makefile  README  README.md
aufgaben/: .gitignore  Makefile  Makefile.include  README  a-begin.tex  aufgaben.tex  aufgabensammlung.tex  buildchapter.sh  macros-uebungen.tex  mkinclude  mkthemaidx.cpp  mkvkf.sh  ohnethema.sh  probeloesung.tex  probepruefung.tex  test.tex  testaufgabe.tex  themaliste.sh  uebungen.tex  vkf.csv  vkf.template  vorwort.tex  woche01.tex  woche02.tex  woche03.tex  woche04.tex  woche05.tex  woche06.tex  woche07.tex  woche08.tex  woche09.tex  woche10.tex  woche11.tex  woche12.tex  woche13.tex
aufgaben/1/: 10000001.tex  10000002.tex  10000003.tex  10000004.tex  10000005.tex  10000006.tex  10000007.tex  10000008.tex  10000009.tex  10000010.tex  10000011.tex  10000012.tex  10000013.tex  10000014.tex  10000017.tex
aufgaben/2/: 20000001.tex  20000002.tex  20000003.tex  20000005.tex  20000006.tex
aufgaben/3/: 30000001.tex  30000002.tex  30000003.tex  30000004.tex  30000005.tex  30000006.tex  30000007.tex  30000008.tex  30000009.tex  30000010.tex  30000011.tex  30000012.tex  30000013.tex  30000014.tex  30000015.tex  30000016.tex  30000017.tex  30000018.tex  30000019.tex  30000020.tex  30000021.tex  30000022.tex  30000023.tex  30000024.tex  30000025.tex  30000026.tex  30000027.tex  30000028.tex  30000029.tex  30000030.tex  30000031.tex  30000032.tex  30000033.tex  30000034.tex  30000035.tex  30000036.tex  30000037.tex  30000038.tex  30000039.tex  30000040.tex  (+58 more)
aufgaben/4/: 40000001.tex  40000002.tex  40000003.tex  40000004.tex  40000005.tex  40000006.tex  40000007.tex  40000008.tex  40000009.tex  40000010.tex  40000011.tex  40000012.tex  40000013.tex  40000014.tex  40000015.tex  40000016.tex  40000017.tex  40000018.tex  40000019.tex  40000020.tex  40000021.tex  40000022.tex  40000023.tex  40000024.tex  40000025.tex  40000026.tex  40000027.tex  40000028.tex  40000029.tex  40000030.tex  40000031.tex  40000032.tex  40000033.tex  40000034.tex  40000035.tex  40000036.tex  40000037.tex  40000038.tex  40000039.tex  40000040.tex  (+53 more)
aufgaben/5/: 50000001.tex  50000002.tex  50000003.tex  50000004.tex  50000005.tex  50000006.tex  50000007.tex  50000008.tex  50000009.tex  50000010.tex  50000011.tex  50000012.tex  50000013.tex  50000014.tex  50000015.tex  50000016.tex  50000017.tex  50000018.tex  50000019.tex  50000020.tex  50000021.tex  50000022.tex  50000023.tex  50000024.tex  50000025.tex  50000026.tex  50000027.tex  50000028.tex  50000029.tex  50000030.tex  50000031.tex  50000032.tex  50000033.tex  50000034.tex  50000035.tex  50000036.tex  50000037.tex  50000038.tex  50000039.tex  50000040.tex  (+2 more)
aufgaben/6/: 60000001.tex  60000002.tex  60000003.tex  60000004.tex  60000005.tex  60000006.tex  60000007.tex  60000008.tex  60000009.tex  60000010.tex  60000011.tex  60000012.tex  60000013.tex  60000014.tex  60000015.tex  60000016.tex  60000017.tex  60000018.tex  60000019.tex  60000020.tex  60000021.tex  60000022.tex  60000023.tex  60000024.tex  60000025.tex  60000026.tex  60000027.tex  60000028.tex  60000029.tex  60000030.tex  60000031.tex  60000032.tex  60000033.tex  60000034.tex  60000035.tex  60000036.tex  60000037.tex  60000038.tex  60000039.tex  60000040.tex  (+13 more)
aufgaben/7/: 70000001.tex  70000002.tex  70000003.tex  70000004.tex  70000005.tex  70000006.tex  70000007.tex  70000008.tex  70000009.tex  70000010.tex  70000011.tex  70000012.tex  70000013.tex  70000014.tex  70000015.tex  70000016.tex  70000017.tex  70000018.tex  70000019.tex  70000020.tex  70000021.tex  70000022.tex  70000023.tex  70000024.tex  70000025.tex  70000026.tex  70000027.tex  (+51 more)
code/: README
code/gvm/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  configureit
code/gvm/common/: Makefile.am  includes.h
code/gvm/doc/: Makefile.am  assign.h  beispiel.goto  condgoto.h  engine.h  goto.h  gvm.1  gvm.tex  node.h  nodes.h  parser.y  parsergoto.y  print.goto  steuerung.goto  tm.h  tmc-beaver.tm  tmc-command.goto  tmc-initial.goto  tmc-isolate.goto  tmc-move.goto  tmc-printtm.goto  tmc-splice.goto  tmc-state.goto  tmc.1  vm.h
code/gvm/tmc/: Makefile.am  tmc-grammar.y  tmc-tokens.l  tmc.c  tmc.h
code/gvm/tmc/data/: Makefile.am  addtape1  addtape2  addtape3
code/gvm/tmc/pgm/: Makefile.am  beaver3  beaver4
code/gvm/vm/: Makefile.am  grammar.y  gvm.c  gvm.h  test.goto  tokens.l  utils.c  utils.h
skript/: Makefile  a-begin.tex  algorithmen.tex  ausfuellraetsel.tex  cfg.tex  checklist.tex  einleitung.tex  entscheidbarkeit.tex  grundlagen.tex  karp.tex  komplexitaet.tex  realworldparser.tex  references.bib  regulaer.tex  skript.tex  sprachen.tex  sudoku.tex  turing.tex  vollstaendig.tex
(+303 files in other folders)
